--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ mtcnn==0.1.0
 namex==0.0.7
 numpy==1.26.3
 oauthlib==3.2.2
-opencv-python==4.9.0.80
+opencv-python
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.1.4
