--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
-keras
+keras==2.8.0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 keras-vggface==0.6
